<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="false"
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:background="#FFFBFDFF"
    android:orientation="vertical"
    android:weightSum="1"

    tools:context=".Fixedbias_main">


    <include
        android:id="@+id/tool_bar"
        layout="@layout/app_bar"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical"
        android:padding="25dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center_horizontal"
            android:text="@string/FB1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:gravity="center_horizontal"
            android:text="@string/FBtext"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/FBRc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:ems="10"
                android:hint="@string/Rchint"
                android:inputType="number|numberDecimal"
                android:numeric="decimal"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/FBRb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:hint="@string/Rbhint"
                android:inputType="number|numberDecimal"
                android:numeric="decimal"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/FBVcc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:hint="@string/Vcchint"
                android:inputType="number|numberSigned|numberDecimal"
                android:numeric="decimal"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/FBvbb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:hint="@string/Vbbhint"
                android:inputType="number|numberSigned|numberDecimal"
                android:numeric="decimal"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <EditText
                android:id="@+id/FBBeta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="50"
                android:hint="@string/beta"
                android:inputType="number|numberDecimal"
                android:numeric="decimal"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/FixedCalc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="FixedBias"
                android:text="Calculate" />

            <Button
                android:id="@+id/bClr"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:onClick="onButtonClick2"
                android:text="Clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/vcefb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text=" " />


            <TextView
                android:id="@+id/collectorcurrentFB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="100"
                android:text=" " />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>